--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,10 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+/*allprojects {
+    repositories {
+        maven {
+            url 'https://jitpack.io'
+        }
+    }
+}*/
