--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,18 +28,18 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.10.2'
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
-    implementation 'com.google.android.exoplayer:exoplayer-dash:2.8.4'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.8.4'
+    //implementation 'com.google.android.exoplayer:exoplayer-core:2.10.2'
+    //implementation 'com.google.android.exoplayer:exoplayer-dash:2.8.4'
+    //implementation 'com.google.android.exoplayer:exoplayer-ui:2.8.4'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     //implementation 'com.github.mohammadatif:Animatoo:master'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 }
